--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div class="root"></div>
-    <script src="./src/index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
