--- a/static/index.html
+++ b/static/index.html
@@ -11,8 +11,8 @@
         <div class="home__modal">
           <p class="home__title">Страницы чата</p>
           <ul class="home__links">
-            <li><a class="home__link" href="signin">1. Авторизация</a></li>
-            <li><a class="home__link" href="signup">2. Регистрация</a></li>
+            <li><a class="home__link" href="./signin.html">1. Авторизация</a></li>
+            <li><a class="home__link" href="./signup.html">2. Регистрация</a></li>
             <li><a class="home__link" href="./chat.html">3. Список чатов и лента переписки</a></li>
             <li><a class="home__link" href="me">4. Настройки пользователя</a></li>
             <li><a class="home__link" href="./404.html">5. Страница 404</a></li>
