--- a/static/signin.html
+++ b/static/signin.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="root"></div>
+    <script src="../src/index.js" type="module"></script>
     <script src="../src/pages/home/signin/index.js" type="module"></script>
   </body>
 </html>
