--- a/static/profile.html
+++ b/static/profile.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="root"></div>
-    <script src="../src/index.js" type="module"></script>
-    <script src="../src/pages/profile/index.js" type="module"></script>
+    <script src="../src/index.ts" type="module"></script>
+    <script src="../src/pages/profile/index.ts" type="module"></script>
   </body>
 </html>
